Small alignment fix

--- a/static/css/participants.css
+++ b/static/css/participants.css
@@ -67,7 +67,7 @@
 }
 #participantDetailsWrapper .participantActivation
 {
-	float: right;
+	float: left;
 }
 #participantDetailsWrapper .participantDetailsContent .row{
 	margin-bottom: 20px;
